2006-03-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-make-tool-bar): Rename gmm-image-load-path
	to gmm-image-load-path-for-library.  Call with no-error argument.
	(message-tool-bar-gnome): Rename "mail/attach" to "attach".

	* gnus-sum.el (gnus-summary-make-tool-bar): Ditto.

	* gnus-group.el (gnus-group-make-tool-bar): Ditto.

	* gmm-utils.el (gmm-image-load-path): Remove alias.

2006-03-06  Reiner Steib  <Reiner.Steib@gmx.de>

	* gmm-utils.el (gmm-image-load-path): Add alias.

	* nnml.el (nnml-generate-nov-databases-directory): Rename from
	nnml-generate-nov-databases-1.
	(nnml-generate-nov-databases): Use it.
	(nnml-generate-nov-databases-directory): Document no-active
	argument.

	* gmm-utils.el (gmm-image-load-path-for-library): Return single
	directory if path is t.  Add no-error.

	* gnus-group.el (gnus-group-make-tool-bar): Use add-hook.
	Suggested by Stefan Monnier <monnier@iro.umontreal.ca>.

	* gnus-art.el (gnus-article-browse-delete-temp-files): Simplify
	resetting gnus-article-browse-html-temp-list.

	* gmm-utils.el (gmm-image-load-path-for-library): Sync with
	mh-compat.el revision 1.9 in Emacs.  Rename `gmm-image-load-path'.
	Add example to docstring.  Rename local variables.  Move error
	checks to default case in cond and simplify.

2006-03-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-w3m-cid-retrieve-1): Check carefully whether
	handle is multipart when calling it recursively.
	(mm-w3m-cid-retrieve): Display warning if retrieving fails.

2006-03-03  Daniel Pittman <daniel@rimspace.net>

	* nnimap.el (nnimap-request-update-info-internal): Optimize.

2006-03-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-tool-bar-gnome): Check if gnus-topic.el
	is loaded.

	* gnus-sum.el (gnus-summary-tool-bar-gnome): Check if spam.el is
	loaded.

2006-03-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-with-unibyte-current-buffer): Change "Emacs 23"
	to "Emacs 23 (unicode)" in doc string.
